# serializer version: 1
# name: test_cancel
  dict({
    'args': dict({
    }),
    'claim': None,
    'claimed_at': None,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'pinged_at': None,
    'progress': 100,
    'state': <JobState.CANCELLED: 'cancelled'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.BUILD_INDEX: 'build_index'>,
  })
# ---
# name: test_create
  dict({
    'args': dict({
    }),
    'claim': None,
    'claimed_at': None,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'pinged_at': None,
    'progress': 0,
    'state': <JobState.PENDING: 'pending'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.BUILD_INDEX: 'build_index'>,
  })
# ---
